// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`map response of nodes data should handle empty clusterStats 1`] = `
Array [
  Object {
    "isOnline": false,
    "name": "hello01",
    "nodeTypeClass": "fa-server",
    "nodeTypeLabel": "Node",
    "resolver": "_x_V2YzPQU-a9KRRBxUxZQ",
    "shardCount": 6,
    "transport_address": "127.0.0.1:9300",
    "type": "node",
  },
  Object {
    "isOnline": false,
    "name": "hello02",
    "nodeTypeClass": "fa-server",
    "nodeTypeLabel": "Node",
    "resolver": "DAiX7fFjS3Wii7g2HYKrOg",
    "shardCount": 6,
    "transport_address": "127.0.0.1:9301",
    "type": "node",
  },
]
`;

exports[`map response of nodes data should handle empty shardStats 1`] = `
Array [
  Object {
    "isOnline": true,
    "name": "hello01",
    "nodeTypeClass": "fa-star",
    "nodeTypeLabel": "Master Node",
    "node_cgroup_quota": Object {
      "metric": Object {
        "app": "elasticsearch",
        "description": "CPU Usage time compared to the CPU quota shown in percentage. If CPU quotas are not set, then no data will be shown.",
        "field": "node_stats.process.cpu.percent",
        "format": "0,0.[00]",
        "hasCalculation": true,
        "isDerivative": true,
        "label": "Cgroup CPU Utilization",
        "metricAgg": "max",
        "title": "CPU Utilization",
        "units": "%",
      },
      "summary": Object {
        "lastVal": 37.3891333,
        "maxVal": 41.948963750000004,
        "minVal": 11.02918065,
        "slope": 1,
      },
    },
    "node_cgroup_throttled": Object {
      "metric": Object {
        "app": "elasticsearch",
        "description": "The amount of throttled time, reported in nanoseconds, of the Cgroup.",
        "field": "node_stats.os.cgroup.cpu.stat.time_throttled_nanos",
        "format": "0,0.[0]a",
        "hasCalculation": false,
        "isDerivative": true,
        "label": "Cgroup Throttling",
        "metricAgg": "max",
        "title": "Cgroup CPU Performance",
        "units": "ns",
      },
      "summary": Object {
        "lastVal": 123012140,
        "maxVal": 30063709491,
        "minVal": 0,
        "slope": -1,
      },
    },
    "node_cpu_utilization": Object {
      "metric": Object {
        "app": "elasticsearch",
        "description": "Percentage of CPU usage for the Elasticsearch process.",
        "field": "node_stats.process.cpu.percent",
        "format": "0,0.[00]",
        "hasCalculation": false,
        "isDerivative": false,
        "label": "CPU Utilization",
        "metricAgg": "max",
        "units": "%",
      },
      "summary": Object {
        "lastVal": 3,
        "maxVal": 4,
        "minVal": 1,
        "slope": 1,
      },
    },
    "node_free_space": Object {
      "metric": Object {
        "app": "elasticsearch",
        "description": "Free disk space available on the node.",
        "field": "node_stats.fs.total.available_in_bytes",
        "format": "0.0 b",
        "hasCalculation": false,
        "isDerivative": false,
        "label": "Disk Free Space",
        "metricAgg": "max",
        "units": "",
      },
      "summary": Object {
        "lastVal": 3141324800,
        "maxVal": 3195629568,
        "minVal": 3141324800,
        "slope": -1,
      },
    },
    "node_jvm_mem_percent": Object {
      "metric": Object {
        "app": "elasticsearch",
        "description": "Total heap used by Elasticsearch running in the JVM.",
        "field": "node_stats.jvm.mem.heap_used_percent",
        "format": "0,0.[00]",
        "hasCalculation": false,
        "isDerivative": false,
        "label": "Used Heap",
        "metricAgg": "max",
        "title": "JVM Heap",
        "units": "%",
      },
      "summary": Object {
        "lastVal": 40,
        "maxVal": 52,
        "minVal": 25,
        "slope": -1,
      },
    },
    "node_load_average": Object {
      "metric": Object {
        "app": "elasticsearch",
        "description": "Load average over the last minute.",
        "field": "node_stats.os.cpu.load_average.1m",
        "format": "0,0.[00]",
        "hasCalculation": false,
        "isDerivative": false,
        "label": "1m",
        "metricAgg": "max",
        "title": "System Load",
        "units": "",
      },
      "summary": Object {
        "lastVal": 1.0400390625,
        "maxVal": 2.439453125,
        "minVal": 1.0400390625,
        "slope": -1,
      },
    },
    "resolver": "_x_V2YzPQU-a9KRRBxUxZQ",
    "shardCount": null,
    "transport_address": "127.0.0.1:9300",
    "type": "master",
  },
  Object {
    "isOnline": true,
    "name": "hello02",
    "nodeTypeClass": "fa-server",
    "nodeTypeLabel": "Node",
    "node_cgroup_quota": undefined,
    "node_cgroup_throttled": Object {
      "metric": Object {
        "app": "elasticsearch",
        "description": "The amount of throttled time, reported in nanoseconds, of the Cgroup.",
        "field": "node_stats.os.cgroup.cpu.stat.time_throttled_nanos",
        "format": "0,0.[0]a",
        "hasCalculation": false,
        "isDerivative": true,
        "label": "Cgroup Throttling",
        "metricAgg": "max",
        "title": "Cgroup CPU Performance",
        "units": "ns",
      },
      "summary": Object {
        "lastVal": 0,
        "maxVal": 0,
        "minVal": 0,
        "slope": -1,
      },
    },
    "node_cpu_utilization": Object {
      "metric": Object {
        "app": "elasticsearch",
        "description": "Percentage of CPU usage for the Elasticsearch process.",
        "field": "node_stats.process.cpu.percent",
        "format": "0,0.[00]",
        "hasCalculation": false,
        "isDerivative": false,
        "label": "CPU Utilization",
        "metricAgg": "max",
        "units": "%",
      },
      "summary": Object {
        "lastVal": 0,
        "maxVal": 8,
        "minVal": 0,
        "slope": -1,
      },
    },
    "node_free_space": Object {
      "metric": Object {
        "app": "elasticsearch",
        "description": "Free disk space available on the node.",
        "field": "node_stats.fs.total.available_in_bytes",
        "format": "0.0 b",
        "hasCalculation": false,
        "isDerivative": false,
        "label": "Disk Free Space",
        "metricAgg": "max",
        "units": "",
      },
      "summary": Object {
        "lastVal": 3141402624,
        "maxVal": 3148406784,
        "minVal": 3141402624,
        "slope": -1,
      },
    },
    "node_jvm_mem_percent": Object {
      "metric": Object {
        "app": "elasticsearch",
        "description": "Total heap used by Elasticsearch running in the JVM.",
        "field": "node_stats.jvm.mem.heap_used_percent",
        "format": "0,0.[00]",
        "hasCalculation": false,
        "isDerivative": false,
        "label": "Used Heap",
        "metricAgg": "max",
        "title": "JVM Heap",
        "units": "%",
      },
      "summary": Object {
        "lastVal": 41,
        "maxVal": 43,
        "minVal": 22,
        "slope": 1,
      },
    },
    "node_load_average": Object {
      "metric": Object {
        "app": "elasticsearch",
        "description": "Load average over the last minute.",
        "field": "node_stats.os.cpu.load_average.1m",
        "format": "0,0.[00]",
        "hasCalculation": false,
        "isDerivative": false,
        "label": "1m",
        "metricAgg": "max",
        "title": "System Load",
        "units": "",
      },
      "summary": Object {
        "lastVal": 1.0400390625,
        "maxVal": 2.439453125,
        "minVal": 1.0400390625,
        "slope": -1,
      },
    },
    "resolver": "DAiX7fFjS3Wii7g2HYKrOg",
    "shardCount": null,
    "transport_address": "127.0.0.1:9301",
    "type": "node",
  },
]
`;

exports[`map response of nodes data should handle empty time options 1`] = `
Array [
  Object {
    "isOnline": true,
    "name": "hello01",
    "nodeTypeClass": "fa-star",
    "nodeTypeLabel": "Master Node",
    "node_cgroup_quota": null,
    "node_cgroup_throttled": null,
    "node_cpu_utilization": null,
    "node_free_space": null,
    "node_jvm_mem_percent": null,
    "node_load_average": null,
    "resolver": "_x_V2YzPQU-a9KRRBxUxZQ",
    "shardCount": 6,
    "transport_address": "127.0.0.1:9300",
    "type": "master",
  },
  Object {
    "isOnline": true,
    "name": "hello02",
    "nodeTypeClass": "fa-server",
    "nodeTypeLabel": "Node",
    "node_cgroup_quota": null,
    "node_cgroup_throttled": null,
    "node_cpu_utilization": null,
    "node_free_space": null,
    "node_jvm_mem_percent": null,
    "node_load_average": null,
    "resolver": "DAiX7fFjS3Wii7g2HYKrOg",
    "shardCount": 6,
    "transport_address": "127.0.0.1:9301",
    "type": "node",
  },
]
`;

exports[`map response of nodes data should summarize response data, with cgroup metrics 1`] = `
Array [
  Object {
    "isOnline": true,
    "name": "hello01",
    "nodeTypeClass": "fa-star",
    "nodeTypeLabel": "Master Node",
    "node_cgroup_quota": Object {
      "metric": Object {
        "app": "elasticsearch",
        "description": "CPU Usage time compared to the CPU quota shown in percentage. If CPU quotas are not set, then no data will be shown.",
        "field": "node_stats.process.cpu.percent",
        "format": "0,0.[00]",
        "hasCalculation": true,
        "isDerivative": true,
        "label": "Cgroup CPU Utilization",
        "metricAgg": "max",
        "title": "CPU Utilization",
        "units": "%",
      },
      "summary": Object {
        "lastVal": 37.3891333,
        "maxVal": 41.948963750000004,
        "minVal": 11.02918065,
        "slope": 1,
      },
    },
    "node_cgroup_throttled": Object {
      "metric": Object {
        "app": "elasticsearch",
        "description": "The amount of throttled time, reported in nanoseconds, of the Cgroup.",
        "field": "node_stats.os.cgroup.cpu.stat.time_throttled_nanos",
        "format": "0,0.[0]a",
        "hasCalculation": false,
        "isDerivative": true,
        "label": "Cgroup Throttling",
        "metricAgg": "max",
        "title": "Cgroup CPU Performance",
        "units": "ns",
      },
      "summary": Object {
        "lastVal": 123012140,
        "maxVal": 30063709491,
        "minVal": 0,
        "slope": -1,
      },
    },
    "node_cpu_utilization": Object {
      "metric": Object {
        "app": "elasticsearch",
        "description": "Percentage of CPU usage for the Elasticsearch process.",
        "field": "node_stats.process.cpu.percent",
        "format": "0,0.[00]",
        "hasCalculation": false,
        "isDerivative": false,
        "label": "CPU Utilization",
        "metricAgg": "max",
        "units": "%",
      },
      "summary": Object {
        "lastVal": 3,
        "maxVal": 4,
        "minVal": 1,
        "slope": 1,
      },
    },
    "node_free_space": Object {
      "metric": Object {
        "app": "elasticsearch",
        "description": "Free disk space available on the node.",
        "field": "node_stats.fs.total.available_in_bytes",
        "format": "0.0 b",
        "hasCalculation": false,
        "isDerivative": false,
        "label": "Disk Free Space",
        "metricAgg": "max",
        "units": "",
      },
      "summary": Object {
        "lastVal": 3141324800,
        "maxVal": 3195629568,
        "minVal": 3141324800,
        "slope": -1,
      },
    },
    "node_jvm_mem_percent": Object {
      "metric": Object {
        "app": "elasticsearch",
        "description": "Total heap used by Elasticsearch running in the JVM.",
        "field": "node_stats.jvm.mem.heap_used_percent",
        "format": "0,0.[00]",
        "hasCalculation": false,
        "isDerivative": false,
        "label": "Used Heap",
        "metricAgg": "max",
        "title": "JVM Heap",
        "units": "%",
      },
      "summary": Object {
        "lastVal": 40,
        "maxVal": 52,
        "minVal": 25,
        "slope": -1,
      },
    },
    "node_load_average": Object {
      "metric": Object {
        "app": "elasticsearch",
        "description": "Load average over the last minute.",
        "field": "node_stats.os.cpu.load_average.1m",
        "format": "0,0.[00]",
        "hasCalculation": false,
        "isDerivative": false,
        "label": "1m",
        "metricAgg": "max",
        "title": "System Load",
        "units": "",
      },
      "summary": Object {
        "lastVal": 1.0400390625,
        "maxVal": 2.439453125,
        "minVal": 1.0400390625,
        "slope": -1,
      },
    },
    "resolver": "_x_V2YzPQU-a9KRRBxUxZQ",
    "shardCount": 6,
    "transport_address": "127.0.0.1:9300",
    "type": "master",
  },
  Object {
    "isOnline": true,
    "name": "hello02",
    "nodeTypeClass": "fa-server",
    "nodeTypeLabel": "Node",
    "node_cgroup_quota": undefined,
    "node_cgroup_throttled": Object {
      "metric": Object {
        "app": "elasticsearch",
        "description": "The amount of throttled time, reported in nanoseconds, of the Cgroup.",
        "field": "node_stats.os.cgroup.cpu.stat.time_throttled_nanos",
        "format": "0,0.[0]a",
        "hasCalculation": false,
        "isDerivative": true,
        "label": "Cgroup Throttling",
        "metricAgg": "max",
        "title": "Cgroup CPU Performance",
        "units": "ns",
      },
      "summary": Object {
        "lastVal": 0,
        "maxVal": 0,
        "minVal": 0,
        "slope": -1,
      },
    },
    "node_cpu_utilization": Object {
      "metric": Object {
        "app": "elasticsearch",
        "description": "Percentage of CPU usage for the Elasticsearch process.",
        "field": "node_stats.process.cpu.percent",
        "format": "0,0.[00]",
        "hasCalculation": false,
        "isDerivative": false,
        "label": "CPU Utilization",
        "metricAgg": "max",
        "units": "%",
      },
      "summary": Object {
        "lastVal": 0,
        "maxVal": 8,
        "minVal": 0,
        "slope": -1,
      },
    },
    "node_free_space": Object {
      "metric": Object {
        "app": "elasticsearch",
        "description": "Free disk space available on the node.",
        "field": "node_stats.fs.total.available_in_bytes",
        "format": "0.0 b",
        "hasCalculation": false,
        "isDerivative": false,
        "label": "Disk Free Space",
        "metricAgg": "max",
        "units": "",
      },
      "summary": Object {
        "lastVal": 3141402624,
        "maxVal": 3148406784,
        "minVal": 3141402624,
        "slope": -1,
      },
    },
    "node_jvm_mem_percent": Object {
      "metric": Object {
        "app": "elasticsearch",
        "description": "Total heap used by Elasticsearch running in the JVM.",
        "field": "node_stats.jvm.mem.heap_used_percent",
        "format": "0,0.[00]",
        "hasCalculation": false,
        "isDerivative": false,
        "label": "Used Heap",
        "metricAgg": "max",
        "title": "JVM Heap",
        "units": "%",
      },
      "summary": Object {
        "lastVal": 41,
        "maxVal": 43,
        "minVal": 22,
        "slope": 1,
      },
    },
    "node_load_average": Object {
      "metric": Object {
        "app": "elasticsearch",
        "description": "Load average over the last minute.",
        "field": "node_stats.os.cpu.load_average.1m",
        "format": "0,0.[00]",
        "hasCalculation": false,
        "isDerivative": false,
        "label": "1m",
        "metricAgg": "max",
        "title": "System Load",
        "units": "",
      },
      "summary": Object {
        "lastVal": 1.0400390625,
        "maxVal": 2.439453125,
        "minVal": 1.0400390625,
        "slope": -1,
      },
    },
    "resolver": "DAiX7fFjS3Wii7g2HYKrOg",
    "shardCount": 6,
    "transport_address": "127.0.0.1:9301",
    "type": "node",
  },
]
`;
